@@ -1,3 +1,9 @@
+2019-11-13  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/92473
+	* tree-vect-loop.c (vect_create_epilog_for_reduction): Perform
+	direct optab reduction in the correct type.
+
 2019-11-12  Segher Boessenkool  <segher@kernel.crashing.org>
 
 	* config/rs6000/rs6000.md (rs6000_set_fpscr_drn): Use ULL on big
